feat: integrate Hugging Face Transformers for AI simulation
- Added @huggingface/transformers dependency to package.json for AI model support.
- Enhanced GameHistoryEntry interface to include gameState for tracking game progress.
- Implemented GameState management in main.ts to track down, yards to go, ball position, scores, and possession.
- Updated UI to reflect current game state and scores, including new settings for AI provider selection (OpenRouter and Granite).
- Created functionality for loading and managing the Granite AI model locally, including progress tracking and error handling.
- Improved play simulation logic to utilize the selected AI provider for generating play outcomes.
- Added replay functionality in history modal to review past plays with updated game state.
- Styled UI elements for better user experience, including new button styles and layout adjustments.
- Set up GitHub Actions workflow for automated deployment to GitHub Pages.
- Configured Vite for optimized builds and cross-origin policies for better performance with WebAssembly.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.5.1",
     "babylonjs": "^7.0.0",
     "babylonjs-loaders": "^7.0.0",
     "idb": "^8.0.3",
